portfolio blog link update

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
-                <a href="https://v-natalia.github.io/js-30/" target="_blank" class="image fit thumb"><img src="images/arrow.jpg" alt="reecover"></a>
+                <a href="https://v-natalia.github.io/blog/" target="_blank" class="image fit thumb"><img src="images/arrow.jpg" alt="reecover"></a>
                 <h3 class="open-reveal"><strong>Blog</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
@@ -114,7 +114,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Clockwork<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS. En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails qui ressemblera aux enfants nés de la technique pomodoro et une liste de tâches. Ce sera un outil pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
+                <p class="text-justify">Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS. En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails qui ressemblera à un enfant nés de la technique pomodoro et une liste de tâches. Ce sera un outil pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
                 <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
               </div>
             </div>
