--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 work-item">
+<!--           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
                 <a href="https://github.com/v-natalia/clockwork" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
@@ -132,7 +132,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
       <section>
         <div id="contactform">
