add photo on folder

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <header id="header">
         <div class="inner">
           <h1>Natalia Vega</h1>
-          <a href="https://v-natalia.github.io/profile/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+          <a href="https://v-natalia.github.io/profile/" class="image avatar"><img src="images/natalia.jpg" alt="" /></a>
           <h4>Développeuse Fullstack</h4>
           <ul class="list-inline">
             <li class="text-center">
