--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
-                <a href="https://larcecr.github.io/" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
+                <a href="https://ecrlarc.github.io/" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
                 <h3 class="open-reveal"><strong>ECR-LARC</strong><br>Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
