modifications of css, colors and text

--- a/index.html
+++ b/index.html
@@ -45,25 +45,29 @@
             </li>
           </ul>
         </div>
+        <div class="tags">
+            <span class="badge badge-pill extra badge-light">#RubyOnRails</span>
+            <span class="badge badge-pill extra badge-light">#Ruby</span>
+            <span class="badge badge-pill extra badge-light">#Python</span>
+            <span class="badge badge-pill extra badge-light">#PostgreSQL</span>
+            <span class="badge badge-pill extra badge-light">#heroku</span>
+            <span class="badge badge-pill extra badge-light">#git</span>
+            <span class="badge badge-pill extra badge-light">#HTML</span>
+            <span class="badge badge-pill extra badge-light">#CSS</span>
+            <span class="badge badge-pill extra badge-light">#jekyll</span>
+            <span class="badge badge-pill extra badge-light">#Photoshop</span>
+          </div>
       </header>
     </div>
     <div id="main">
       <section id="first">
         <header class="major text-justify">
-          <h4><strong>Développeuse Fullstack,</strong> j'ai récemment fini ma formation  au bootcamp <a href="https://www.lewagon.com/paris">Le Wagon</a> (Batch#220, Hiver 2019)</h4>
+          <h4><strong>Développeuse Fullstack,</strong> formée chez <a href="https://www.lewagon.com/paris">Le Wagon</a>, je peux travailler dans le front ou le backend de votre projet web.</h4>
           <br>
-          <div class="tags">
-            <span class="badge badge-light">#RubyOnRails</span>
-            <span class="badge badge-light">#PostgreSQL</span>
-            <span class="badge badge-light">#heroku</span>
-            <span class="badge badge-light">#git</span>
-            <span class="badge badge-light">#HTML</span>
-            <span class="badge badge-light">#CSS</span>
-            <span class="badge badge-light">#Photoshop</span>
-          </div>
           <br>
           <div class="paragraph">
-            <p>Passionnée par la photographie, avec une capacité d'analyse et de synthèse. Je peux être créative et rigoureuse à la fois, je suis curieuse envers la nouveauté, je cherche une activité stimulante et je peux suivre un rythme de travail intense. Je cherche à rejoindre une équipe des talents qui veulent avoir un impact positif sur le monde.</p>
+            <p>Je peux vous aider à concevoir votre application web responsive (user stories, wireframe, interface design, schéma de base de données), coder votre site, le mettre en ligne et implementer des outils comme Google Analytics. Dans ce site, vous pouvez trouver quelques unes de mes réalisations, d'ailleurs, j'ai aussi réalisé quelques projets en backend pour des entreprises.</p>
+         <!--    Passionnée par la photographie, avec une capacité d'analyse et de synthèse. Je peux être créative et rigoureuse à la fois, je suis curieuse envers la nouveauté, je cherche une activité stimulante et je peux suivre un rythme de travail intense. Je cherche à rejoindre une équipe des talents qui veulent avoir un impact positif sur le monde. -->
           </div>
         </header>
       </section>
@@ -78,7 +82,8 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Reecover<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">Ce site est le projet de fin de cours réalisé en équipe pendant les 2 dernières semaines au Wagon. C'est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.</p>
+                <p class="text-justify">Ce site est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.
+                Parmi les technologies implémentés: authentication (devise), internationalization (i18n), cloudinary pour les images, barre de recherche (PG::Search), bootstrap, javascript, PostgreSQL, heroku.</p>
               </div>
             </div>
           </div>
@@ -90,7 +95,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Blog<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">J'ai commencé un blog, le prétexte pour apprendre des nouvelles compétences (jekyll). Pour le moment j'écris sur le "javascript challenge" que je suis en train de faire. En anglais.</p>
+                <p class="text-justify">J'ai commencé un blog, le prétexte pour apprendre des nouvelles compétences (jekyll). Vous pouvez trouver des inspirations, des liens vers certains exercises que j'ai fait, notamment en javascript. En anglais.</p>
               </div>
             </div>
           </div>
@@ -102,7 +107,7 @@
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">ECR-LARC<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
+                <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements pour la recherche.</p>
               </div>
             </div>
           </div>
@@ -138,7 +143,7 @@
         <div id="contactform">
           <h4>Formulaire de contact</h4>
           <form class="form-group" action="https://formspree.io/nvegar@gmail.com" method="POST"/>
-            <input type="text" for="validationServer01" class="form-group form-control is-valid" placeholder="Votre nom" name="name" id="validationServer01" required>
+            <input type="text" for="validationServer01" class="form-group form-control is-valid" placeholder="Votre nom et prénom" name="name" id="validationServer01" required>
             <div class="invalid-feedback">
               Veuillez à completer tous les champs.
             </div>
