modif text + add clockwork

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta charset="utf-8">
     <title>Natalia Vega | Développeuse Fullstack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Natalia Vega | Programmer">
-    <meta property="og:title" content="Natalia Vega | Programmer">
+    <meta name="description" content="Natalia Vega | Développeuse Fullstack">
+    <meta property="og:title" content="Natalia Vega | Développeuse Fullstack">
     <meta property="og:image" content="images/facebook-profile.jpg">
-    <meta property="og:description" content="Natalia Vega | Programmer">
+    <meta property="og:description" content="Natalia Vega | Développeuse Fullstack">
     <meta property="og:site_name" content="Natalia Vega"/>
     <meta name="google-site-verification" content="mPXnzguroiAPHsMH8fRZ5LmyyxQaaQOyuo9_uz4F2vk" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -62,11 +62,11 @@
     <div id="main">
       <section id="first">
         <header class="major text-justify">
-          <h4><strong>Développeuse Fullstack,</strong> formée chez <a href="https://www.lewagon.com/paris">Le Wagon</a>, je peux travailler dans le front ou le backend de votre projet web.</h4>
+          <h4><strong>Développeuse Fullstack,</strong> formée chez <a href="https://www.lewagon.com/paris">Le Wagon</a>.</h4>
           <br>
           <br>
           <div class="paragraph">
-            <p>Je peux vous aider à concevoir votre application web responsive (user stories, wireframe, interface design, schéma de base de données), coder votre site, le mettre en ligne et implementer des outils comme Google Analytics. Dans ce site, vous pouvez trouver quelques unes de mes réalisations, d'ailleurs, j'ai aussi réalisé quelques projets en backend pour des entreprises.</p>
+            <p>Je peux vous aider à concevoir votre site ou application web responsive dès la conception (tout en désignant le parcours d'utilisateur, les maquettes, et en implémentant les bases de données pertinentes), en passant par le développement, la mise en production et l'implementation des outils comme Google Analytics pour vous aider à mieux cibler votre audience. Dans ce site, vous pouvez trouver quelques-unes de mes réalisations: des projets pour des clients ou personnels. D'ailleurs, j'ai aussi réalisé quelques projets en back-end pour des entreprises du secteur de l'ingénierie, donc n'hésitez pas à me contacter pour en savoir plus.</p>
          <!--    Passionnée par la photographie, avec une capacité d'analyse et de synthèse. Je peux être créative et rigoureuse à la fois, je suis curieuse envers la nouveauté, je cherche une activité stimulante et je peux suivre un rythme de travail intense. Je cherche à rejoindre une équipe des talents qui veulent avoir un impact positif sur le monde. -->
           </div>
         </header>
@@ -78,24 +78,12 @@
             <div class="card">
               <div class="card-content">
                 <a href="https://www.reecover.fr" target="_blank" class="image fit thumb"><img src="images/homepage-reecover-og-image-1200x630.png" alt="reecover"></a>
-                <h3 class="open-reveal"><strong>Reecover</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
+                <h3 class="open-reveal"><strong>Reecover</strong> <br> Votre carrière a de la valeur</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">Reecover<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">Ce site est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle.
-                Parmi les technologies implémentés: authentication (devise), internationalization (i18n), cloudinary pour les images, barre de recherche (PG::Search), bootstrap, javascript, PostgreSQL, heroku.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 work-item">
-            <div class="card">
-              <div class="card-content">
-                <a href="https://v-natalia.github.io/blog/" target="_blank" class="image fit thumb"><img src="images/arrow.jpg" alt="reecover"></a>
-                <h3 class="open-reveal"><strong>Blog</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
-              </div>
-              <div class="card-reveal">
-                <h3><span class="card-title">Blog<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">J'ai commencé un blog, le prétexte pour apprendre des nouvelles compétences (jekyll). Vous pouvez trouver des inspirations, des liens vers certains exercises que j'ai fait, notamment en javascript. En anglais.</p>
+                <p class="text-justify">Ce site est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle. <br>
+                Parmi les technologies implémentés: Ruby on Rails, authentication(devise), internationalization(i18n), cloudinary pour les images, barre de recherche (PG::Search), bootstrap, javascript, PostgreSQL, heroku.</p>
               </div>
             </div>
           </div>
@@ -103,28 +91,44 @@
             <div class="card">
               <div class="card-content">
                 <a href="https://ecrlarc.github.io/" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
-                <h3 class="open-reveal"><strong>ECR-LARC</strong><br>Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
+                <h3 class="open-reveal"><strong>#eLifeAmbassadors</strong>. Bourses pour des chercheurs latinoaméricains </h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
                 <h3><span class="card-title">ECR-LARC<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements pour la recherche.</p>
-              </div>
-            </div>
-          </div>
-<!--           <div class="col-12 col-md-6 work-item">
-            <div class="card">
-              <div class="card-content">
-                <a href="https://github.com/v-natalia/clockwork" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
-                <h3 class="open-reveal"><strong>Clockwork</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
-              </div>
-              <div class="card-reveal">
-                <h3><span class="card-title">Clockwork<i class="material-icons fas fa-times right text-small"></i></span></h3>
-                <p class="text-justify">Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS. En tant que ninja de l'optimisation du tout, j'ai désigné cette application Rails qui ressemblera à un enfant nés de la technique pomodoro et une liste de tâches. Ce sera un outil pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure).</p>
-                <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
+                <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements pour la recherche. <br>
+                Parmi les technologies implémentés: Bootstrap, Javascript, Typeform, Google docs(csv).</p>
               </div>
             </div>
           </div>
           <div class="col-12 col-md-6 work-item">
+            <div class="card">
+              <div class="card-content">
+                <a href="https://v-natalia.github.io/blog/" target="_blank" class="image fit thumb"><img src="images/arrow.jpg" alt="reecover"></a>
+                <h3 class="open-reveal"><strong>Mon blog</strong></h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
+              </div>
+              <div class="card-reveal">
+                <h3><span class="card-title">Blog<i class="material-icons fas fa-times right text-small"></i></span></h3>
+                <p class="text-justify">J'ai commencé un blog, le prétexte pour apprendre des nouvelles compétences (jekyll). Vous pouvez trouver des inspirations, des liens vers certains exercises que j'ai fait, notamment en javascript. <br> En anglais. <br>
+                Parmi les technologies implémentés: Jekyll(liquid), Javascript.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 work-item">
+            <div class="card">
+              <div class="card-content">
+                <a href="#" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
+                <h3 class="open-reveal"><strong>Clockwork</strong>. Un projet personnel (en progrès)</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
+              </div>
+              <div class="card-reveal">
+                <h3><span class="card-title">Clockwork<i class="material-icons fas fa-times right text-small"></i></span></h3>
+                <p class="text-justify">Ce site est un projet personnel que j'ai créé pour travailler mes habilités en JS. Un outil pour optimiser l'utilisation du temps dans des courtes périodes (au max 1 heure). <br>
+                Parmi les technologies implémentés: Ruby on Rails, Bootstrap, Javascript, internationalization(i18n), local storage and event delegation.
+                </p>
+                <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
                 <a href="https://github.com/v-natalia/rails-mister-cocktail" target="_blank" class="image fit thumb"><img src="images/missmocktail.jpg" alt="miss_mocktail"></a>
@@ -136,8 +140,8 @@
                 <p><span class="badge badge-pill badge-default"><small class="text-muted">En Progrès</small></span></p>
               </div>
             </div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
       </section>
       <section>
         <div id="contactform">
