--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="col-12 col-md-6 work-item">
             <div class="card">
               <div class="card-content">
-                <a href="#" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
+                <a href="#" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
                 <h3 class="open-reveal"><strong>Clockwork</strong>. Un projet personnel (en progrès)</h3><span class="card-title activator right"><i class="material-icons fas fa-plus"></i></span>
               </div>
               <div class="card-reveal">
