add logos of clients

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <span class="badge badge-pill extra badge-light">#HTML</span>
             <span class="badge badge-pill extra badge-light">#CSS</span>
             <span class="badge badge-pill extra badge-light">#jekyll</span>
+            <span class="badge badge-pill extra badge-light">#Wordpress</span>
             <span class="badge badge-pill extra badge-light">#Photoshop</span>
           </div>
       </header>
@@ -84,6 +85,7 @@
                 <h3><span class="card-title">Reecover<i class="material-icons fas fa-times right text-small"></i></span></h3>
                 <p class="text-justify">Ce site est une application Rails pour les sportives en fin de carrière qui cherchent à développer son projet de reconversion professionnelle. <br>
                 Parmi les technologies implémentés: Ruby on Rails, authentication(devise), internationalization(i18n), cloudinary pour les images, barre de recherche (PG::Search), bootstrap, javascript, PostgreSQL, heroku.</p>
+                <p><span class="badge badge-pill badge-default"><small class="text-muted">En ligne</small></span></p>
               </div>
             </div>
           </div>
@@ -97,6 +99,8 @@
                 <h3><span class="card-title">ECR-LARC<i class="material-icons fas fa-times right text-small"></i></span></h3>
                 <p class="text-justify">eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine. L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements pour la recherche. <br>
                 Parmi les technologies implémentés: Bootstrap, Javascript, Typeform, Google docs(csv).</p>
+                <p><span class="badge badge-pill badge-default"><small class="text-muted">En ligne</small></span></p>
+                <p><span class="badge badge-pill badge-default"><small class="text-muted">Pro-bono</small></span></p>
               </div>
             </div>
           </div>
@@ -110,6 +114,7 @@
                 <h3><span class="card-title">Blog<i class="material-icons fas fa-times right text-small"></i></span></h3>
                 <p class="text-justify">J'ai commencé un blog, le prétexte pour apprendre des nouvelles compétences (jekyll). Vous pouvez trouver des inspirations, des liens vers certains exercises que j'ai fait, notamment en javascript. <br> En anglais. <br>
                 Parmi les technologies implémentés: Jekyll(liquid), Javascript.</p>
+                <p><span class="badge badge-pill badge-default"><small class="text-muted">En ligne</small></span></p>
               </div>
             </div>
           </div>
@@ -142,6 +147,15 @@
             </div>
           </div> -->
         </div>
+      </section>
+      <section id="clients">
+         <h3>Clients</h3>
+         <h2 class="clients">J'ai déjà eu le plaisir de travailler, en tant que développeuse freelance, pour: </h2>
+         <ul>
+           <li><img src="images/lewagon.png" alt="Logo Le Wagon école de code"></li>
+           <li><img src="images/joulon.png" alt="Logo Joulon Services"></li>
+           <li><img src="images/OriginAL intérieurs.png" alt="Logo OriginAL intérieurs" class="logo-original"></li>
+         </ul>
       </section>
       <section>
         <div id="contactform">
