--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
             <a href="" target="_blank" class="image fit thumb"><img src="images/ECR_LARC.jpg" alt="ECR-LARC"></a>
             <h3><strong>ECR-LARC</strong> <!-- <br>Bourses et financements pour des chercheurs provenant de l'Amérique Latine #eLifeAmbassadors --></h3>
             <p><!-- eLife est un journal scientifique en libre accès qui publie des articles de recherche en biologie et en médecine.  -->L'initiative #eLifeAmbassadors cherche à encourager la diffusion des résultats scientifiques dans les communautés locales, tout en les connectant avec les développements internationaux. Ce site a été crée pour faciliter l'accès des jeunes chercheurs latino-américains aux informations des bourses et financements de la recherche.</p>
-            <p><small class="text-muted">En progrès</small></p>
+            <p><small class="text-muted">Pro-bono</small></p>
           </div>
           <div class="col-6 col-12-xsmall work-item">
             <a href="" target="_blank" class="image fit thumb"><img src="images/clockwork.jpg" alt=""></a>
