--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; URL=https://v-natalia.github.io/fr/index.html">
+    <link rel="canonical" href="https://v-natalia.github.io/fr/index.html">
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136760312-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -10,8 +14,9 @@
 
       gtag('config', 'UA-136760312-1');
     </script>
-    <meta charset="utf-8">
     <title>Natalia Vega | Développeuse Fullstack</title>
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Natalia Vega | Développeuse Fullstack">
     <meta property="og:title" content="Natalia Vega | Développeuse Fullstack">
